# mediastreamer2

./: .cproject  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  ChangeLog  FindMS2.cmake  FindMS2.cmake.in  LICENSE.txt  Makefile.am  NEWS  README  README-ANDROID  README.md  acinclude.m4  autogen.sh  configure.ac  define-filters.awk  define-ms_base_filter_descs.awk  define-ms_voip_filter_descs.awk  extract-filters-names.awk  gitlab-ci.yml  mediastreamer-config.h.cmake  mediastreamer.pc.in  mediastreamer2.spec.in  msmediarecorder.h
help/: CMakeLists.txt  Doxyfile.in  Makefile.am  doxygen.dox  filters.dox  ht0-buildagraph.dox
include/: CMakeLists.txt
include/MSVC/: inttypes.h  stdint.h
include/OpenGL/: LICENSE  README.md
include/mediastreamer2/: Makefile.am  allfilters.h  android_utils.h  baudot.h  bitratecontrol.h  bits_rw.h  box-plot.h  devices.h  dsptools.h  dtls_srtp.h  dtmfgen.h  fileplayer.h  flowcontrol.h  formats.h  ice.h  iosnotifications.h  mediastream.h  ms_srtp.h  msanalysedisplay.h  msasync.h  msaudiomixer.h  mschanadapter.h  mscngdtx.h  mscodecutils.h  mscommon.h  msconference.h  msequalizer.h  mseventqueue.h  msextdisplay.h  msfactory.h  msfileplayer.h  msfilerec.h  msfilter.h  msgenericplc.h  msiframerequestslimiter.h  msinterfaces.h  msitc.h  msjava.h  msjpegwriter.h  msmediaplayer.h  (+37 more)
src/: .gitignore  CMakeLists.txt  Makefile.am  YCbCr_to_RGB.frag  alsa.c  android-display-bad.cpp  android-display.c  android-display.cpp  android-opengl-display.c  aqsnd.c  audioconference.c  audiomixer.c  audiostream.c  bitratecontrol.c  bitratedriver.c  chanadapt.c  drawdib-display.c  dtmfgen.c  dxfilter.cpp  dxfilter.h  equalizer.c  eventqueue.c  extdisplay.c  ffmpeg-priv.h  filter-template.c  g711common.h  g722.h  g722_decode.c  g722_encode.c  g726.c  generate_descs_header.cmake  generate_yuv2rgb_header.cmake  genericplc.c  gitversion.cmake  gitversion.h  gitversion.h.in  glxvideo.c  gsm.c  h264dec.c  ice.c  (+80 more)
src/android/: AudioRecord.cpp  AudioRecord.h  AudioSystem.cpp  AudioSystem.h  AudioTrack.cpp  AudioTrack.h  String8.cpp  String8.h  android-display-bad.cpp  android-display.c  android-opengl-display.c  android-texture-display.c  android_echo.cpp  android_echo.h  android_mediacodec.cpp  android_mediacodec.h  androidsound.cpp  androidsound_aaudio.cpp  androidsound_depr.cpp  androidsound_opensles.cpp  androidsound_opensles.cpp.orig  androidsound_utils.cpp  androidsound_utils_depr.cpp  androidvideo.cpp  androidvideo_abstract.h  androidvideo_camera.cpp  androidvideo_camera.h  androidvideo_camera2.cpp  androidvideo_camera2.h  audio.h  hardware_echo_canceller.cpp  hardware_echo_canceller.h  loader.cpp  loader.h  media-codec-decoder.cpp  media-codec-decoder.h  media-codec-encoder.cpp  media-codec-encoder.h  media-codec-h264-decoder.cpp  media-codec-h264-encoder.cpp  (+6 more)
src/audiofilters/: aac-eld-android.cpp  aac-eld.c  alaw.c  alsa.c  aqsnd.c  aqsnd.m  arts.c  asyncrw.c  asyncrw.h  audiomixer.c  bv16.c  chanadapt.c  devices.c  devices.h  dtmfgen.c  equalizer.c  flowcontrol.c  flowcontrol.h  g711.c  g711.h  g726.c  g729.c  genericplc.c  genericplc.h  gsm.c  l16.c  macsnd.c  msconf.c  msfileplayer.c  msfileplayer_win.c  msfilerec.c  msg722.c  msgenericplc.c  msiounit.m  msiounit.mm  msopus.c  msresample.c  msspeex.c  msvaddtx.c  msvolume.c  (+21 more)
src/base/: eventqueue.c  msasync.c  mscommon.c  msfactory.c  msfilter.c  msqueue.c  mssndcard.c  mssndcard.c.bk  msticker.c  msvideopresets.c  mswebcam.c  mtu.c
src/baudot/: baudot_context.h  baudot_decoding_context.cpp  baudot_decoding_context.h  baudot_detector_filter.cpp  baudot_encoding_context.cpp  baudot_encoding_context.h  baudot_filters.h  baudot_generator_filter.cpp
src/crypto/: dtls_srtp.c  dtls_srtp.cpp  ms_srtp.c  ms_srtp.cpp  zrtp.c
src/ortp-deps/: README  logging.c  ortp-config-win32.h  ortp-config.h  payloadtype.c  port.c  str_utils.c  update_ortp.sh  utils.h
src/otherfilters/: itc.c  join.c  mspcapfileplayer.c  msrtp.c  msudp.c  rfc4103_sink.c  rfc4103_sink.cpp  rfc4103_source.c  rfc4103_source.cpp  tee.c  void.c
src/screensharing/: screensharingclient.c  screensharingclient.h  screensharingserver.c  screensharingserver.h  screensharingstream.c
src/src.xcodeproj/: project.pbxproj
src/upnp/: upnp_igd.c  upnp_igd.h  upnp_igd_cmd.c  upnp_igd_private.h  upnp_igd_utils.c  upnp_igd_utils.h
src/utils/: _kiss_fft_guts.h  apple_utils.h  apple_utils.m  audiodiff.c  bits_rw.c  box-plot.c  box-plot.h  debug.h  decoding-filter-impl.h  dsptools.c  extremum.c  g722.h  (+49 more)
tester/: CMakeLists.txt  Makefile.am  mediastream_tester_cocoa.m  mediastreamer2_adaptive_tester.c  mediastreamer2_aec3_tester.c  mediastreamer2_aec_tester.c  mediastreamer2_audio_stream_tester.c  mediastreamer2_basic_audio_tester.c  mediastreamer2_baudot_tester.cpp  mediastreamer2_codec_impl_testers.c  mediastreamer2_double_encryption_tester.cpp  mediastreamer2_dtmfgen_tester.c  mediastreamer2_framework_tester.c  mediastreamer2_h26x_tools_tester.cpp  mediastreamer2_jitterbuffer_tester.c  mediastreamer2_neon_tester.c  mediastreamer2_player_recorder_tester.c  mediastreamer2_player_tester.c  mediastreamer2_qrcode_tester.c  mediastreamer2_recorder_tester.c  mediastreamer2_sound_card_tester.c  mediastreamer2_tester.c  mediastreamer2_tester.h  mediastreamer2_tester_cocoa.m  mediastreamer2_tester_ios.m  mediastreamer2_tester_private.c  mediastreamer2_tester_private.h  mediastreamer2_tester_utils.cpp  mediastreamer2_tester_utils.h  mediastreamer2_tester_windows.cpp  mediastreamer2_tester_windows.h  mediastreamer2_text_stream_tester.c  mediastreamer2_video_stream_tester.c  smff_tester.cpp
tests/: Android.mk  Makefile.am  bench.c  echo.c  mediastream.c  mediastream_cocoa.m  mtudiscover.c  pcap_playback.c  ring_jni.c  test_x11window.c  tones.c  videodisplay.c
tools/: .gitignore  CMakeLists.txt  Makefile.am  bench.c  common.c  common.h  echo.c  filters_graph.py  mediastream.c  mediastream_cocoa.m  mkvstream.c  msaudiocmp.c  mtudiscover.c  pcap_playback.c  pcap_player_cocoa.m  player.c  recorder.c  ring.c  ring_jni.c  test_x11window.c  tones.c  videodisplay.c  xxd.py
(+461 files in other folders)
